--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - /Users/wallcraft/Library/Application Support/Postgres/var-13
+      - /home/ubuntu/app/db/pg/Postgres/var-13
 
   redis:
     image: redis:7
@@ -33,3 +33,7 @@ services:
 
     ports:
       - 80:3000
+
+    depends_on:
+      - postgres
+      - redis
