--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
-version: "2"
+version: "3"
 services:
+  nginx:
+    image: nginx:stable-alpine3.17
+    ports:
+      - "80:80"
+      - "443:443"
+
+    volumes:
+      - /nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt
+      - /var/log/nginx:/var/log/nginx 
 
   postgres:
     image: postgres:13-alpine3.17
@@ -26,8 +36,9 @@ services:
       - ./.env
 
     ports:
-      - 80:3000
+      - 3000:3000
 
     depends_on:
       - postgres
       - redis
+      - nginx
