--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,5 @@
-version: "3"
+version: "2"
 services:
-  nginx:
-    image: nginx:stable-alpine3.17
-    ports:
-      - "80:80"
-      - "443:443"
-
-    volumes:
-      - /nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt:/etc/letsencrypt
-      - /var/log/nginx:/var/log/nginx 
 
   postgres:
     image: postgres:13-alpine3.17
@@ -20,7 +10,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - /home/ubuntu/app/db/pg/Postgres/var-13
+      - /home/ubuntu/app/db/pg/Postgres/var-13:/var/lib/postgresql/data
 
   redis:
     image: redis:7
@@ -36,9 +26,8 @@ services:
       - ./.env
 
     ports:
-      - 3000:3000
+      - 80:3000
 
     depends_on:
       - postgres
       - redis
-      - nginx
