--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon bin/www.js --exec babel-node"
+    "start": "npm run build:live",
+    "build": "tsc -p .",
+    "build:live": "nodemon --watch 'src/**/*.ts' --exec ts-node-esm bin/www.ts"
   },
   "type": "module",
   "dependencies": {
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/node": "^20.3.1",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.35.0",
     "connect-busboy": "^1.0.0",
@@ -20,7 +24,9 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.16",
     "pg": "^8.8.0",
-    "redis": "^4.6.5"
+    "redis": "^4.6.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
