--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
       "target": "ES6",
       "outDir": "./dist",
       "moduleResolution": "Node",
-      "lib": ["ES2015", "DOM", "DOM.Iterable"]
+      "module":"ES2020",
+      "lib": ["ES2015", "DOM", "DOM.Iterable"],
+      "typeRoots": ["./node_modules/@types", "./@types"],
+      "allowSyntheticDefaultImports": true,
+      "allowImportingTsExtensions": true
     },
     "include": ["./src/**/*"],
     "exclude": ["node_modules", "dist"]
