[수정]compilerOptions noEmit필드 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "lib": ["ES2015", "DOM", "DOM.Iterable"],
       "typeRoots": ["./node_modules/@types", "./@types"],
       "allowSyntheticDefaultImports": true,
-      "allowImportingTsExtensions": true
+      "allowImportingTsExtensions": true,
+      "noEmit" : true
     },
     "include": ["./src/**/*"],
     "exclude": ["node_modules", "dist"]
