--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/node": "^7.18.6",
-    "@babel/preset-env": "^7.18.6"
+    "@babel/preset-env": "^7.18.6",
+    "@types/express": "^4.17.17"
   }
 }
