--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/node": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2"
+    "@types/jsonwebtoken": "^9.0.2",
+    "prettier": "^3.0.0"
   }
 }
