--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-  "name": "memefrg",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "npm run build:live",
-    "build": "tsc -p .",
-    "build:live": "nodemon --watch 'src/**/*.ts' --exec ts-node-esm bin/www.ts"
-  },
-  "type": "module",
-  "dependencies": {
-    "@babel/preset-typescript": "^7.22.5",
-    "@types/node": "^20.3.1",
-    "bcrypt": "^5.1.0",
-    "cloudinary": "^1.35.0",
-    "connect-busboy": "^1.0.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jsonwebtoken": "^9.0.0",
-    "morgan": "~1.9.1",
-    "node-fetch": "^3.3.2",
-    "nodemon": "^2.0.16",
-    "pg": "^8.8.0",
-    "redis": "^4.6.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/node": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
-    "prettier": "^3.0.0"
-  }
+    "name": "memefrg",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "npm run build:live",
+        "build": "tsc -p .",
+        "build:live": "nodemon --watch 'src/**/*.ts' --exec ts-node-esm bin/www.ts",
+        "test": "jest"
+    },
+    "type": "module",
+    "dependencies": {
+        "@babel/preset-typescript": "^7.22.5",
+        "@types/node": "^20.3.1",
+        "bcrypt": "^5.1.0",
+        "cloudinary": "^1.35.0",
+        "connect-busboy": "^1.0.0",
+        "cookie-parser": "~1.4.4",
+        "debug": "~2.6.9",
+        "dotenv": "^16.0.3",
+        "ejs": "^3.1.8",
+        "express": "~4.16.1",
+        "http-errors": "~1.6.3",
+        "jsonwebtoken": "^9.0.0",
+        "morgan": "~1.9.1",
+        "node-fetch": "^3.3.2",
+        "nodemon": "^2.0.16",
+        "pg": "^8.8.0",
+        "redis": "^4.6.5",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.3"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.18.6",
+        "@babel/node": "^7.18.6",
+        "@babel/preset-env": "^7.18.6",
+        "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.2",
+        "jest": "^29.6.2",
+        "prettier": "^3.0.0"
+    }
 }
