--- a/package.json
+++ b/package.json
@@ -35,8 +35,12 @@
         "@babel/node": "^7.18.6",
         "@babel/preset-env": "^7.18.6",
         "@types/express": "^4.17.17",
+        "@types/jest": "^29.5.3",
         "@types/jsonwebtoken": "^9.0.2",
+        "@types/pg": "^8.10.2",
+        "babel-jest": "^29.6.2",
         "jest": "^29.6.2",
-        "prettier": "^3.0.0"
+        "prettier": "^3.0.0",
+        "ts-jest": "^29.1.1"
     }
 }
