[수정]테스트환경에 맞춘 config 변경, 필요한 dependency 추가

--- a/babel.config.json
+++ b/babel.config.json
@@ -1,3 +1,8 @@
 {
-  "presets":["@babel/preset-typescript"]
+    "presets": ["@babel/preset-typescript"],
+    "env": {
+        "test": {
+            "plugins": ["@babel/plugin-transform-modules-commonjs"]
+        }
+    }
 }
