--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "start": "npm run build:live",
         "build": "tsc -p .",
         "build:live": "nodemon --watch 'src/**/*.ts' --exec ts-node-esm bin/www.ts",
-        "test": "jest"
+        "test": "jest --detectOpenHandles --forceExit"
     },
     "type": "module",
     "dependencies": {
@@ -23,7 +23,7 @@
         "http-errors": "~1.6.3",
         "jsonwebtoken": "^9.0.0",
         "morgan": "~1.9.1",
-        "node-fetch": "^3.3.2",
+        "node-fetch": "^2.6.12",
         "nodemon": "^2.0.16",
         "pg": "^8.8.0",
         "redis": "^4.6.5",
@@ -33,6 +33,7 @@
     "devDependencies": {
         "@babel/core": "^7.18.6",
         "@babel/node": "^7.18.6",
+        "@babel/plugin-transform-modules-commonjs": "^7.22.5",
         "@babel/preset-env": "^7.18.6",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.3",
@@ -41,6 +42,7 @@
         "babel-jest": "^29.6.2",
         "jest": "^29.6.2",
         "prettier": "^3.0.0",
+        "supertest": "^6.3.3",
         "ts-jest": "^29.1.1"
     }
 }
